<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saws_handeye_calibration</name>
  <version>1.0.0</version>
  <description>A ROS2 package for hand-eye calibration using ArUco markers.</description>
  <maintainer email="sgoyal18@jhu.edu">Shashank Goyal</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-pyqt5</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>