<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saws_gripper_msgs</name>
  <version>1.0.0</version>
  <description>Action Message for Gripper Control Server</description>
  <maintainer email="sgoyal18@jhu.edu">Shashank Goyal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend> rosidl_default_runtime </exec_depend>
  <member_of_group> rosidl_interface_packages </member_of_group>

  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>