<?xml version="1.0"?>
<package format="3">
  <name>saws_turtlebot4_nav2_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tarunprasadoff@gmail.com">tarun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>saws_turtlebot4_teleop_setup</depend>
  <depend>turtlebot4_navigation</depend>
  <depend>saws_turtlebot4_nav2_move_to</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
