<?xml version="1.0"?>
<package format="3">
  <name>saws_turtlebot4_nav2_move_to</name>
  <version>0.0.0</version>
  <description>ROS2 script to navigate to a goal using TurtleBot4Navigator.</description>
  <maintainer email="tarunprasadoff@gmail.com">tarun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>turtlebot4_navigation</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
