<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saws_ur5_pickup</name>
  <version>1.0.0</version>
  <description>Package to pick up objects using UR5 robot</description>
  <maintainer email="sgoyal18@jhu.edu">Shashank Goyal</maintainer>
  <license>TODO: License declaration</license>

  <depend>ur_robot_driver</depend>
  <depend>realsense2_camera</depend>
  <depend>saws_ur5_rrmc</depend>
  <depend>aruco_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>